# complexity-c-sort

./: CMakeLists.txt  Makefile  array_utils.c  array_utils.h  count_operations.c  count_operations.h  main  main.c  program  test_recherche  tri.c  tri.h
Exercice1/: tri_fusion.c  tri_insertion.c  tri_rapide.c
Exercice2/: test_recherche.c  test_recherche.h  test_recherche_main.c
